<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp">


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="155dp" />

    <ImageView
        android:id="@+id/backImage"
        android:transitionName="@string/ts_backImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contents"
            android:transitionName="@string/ts_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="글귀"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="닉네임" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/commentImg"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/commentsCount"
                    android:layout_marginEnd="3dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/commentsCount"
                    android:transitionName="@string/ts_countImg"
                    app:srcCompat="@drawable/contents_comment" />

                <TextView
                    android:id="@+id/commentsCount"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/favoriteImg"
                    android:text="100"
                    android:transitionName="@string/ts_countTxt" />

                <ImageView
                    android:id="@+id/favoriteImg"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="3dp"
                    android:layout_toStartOf="@+id/likeCount"
                    android:transitionName="@string/ts_likeImg"
                    app:srcCompat="@drawable/btn_like" />


                <TextView
                    android:id="@+id/likeCount"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:text="0"
                    android:transitionName="@string/ts_likeTxt"/>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>